--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@types/node": "^18.14.4",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
+    "animate.css": "^4.1.0",
     "axios": "^1.3.4",
+    "csstype": "^3.1.1",
     "notistack": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
+    "react-on-screen": "^2.1.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "styled-components": "^5.3.8"
