--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/material": "^5.11.12",
+    "@mui/styled-engine-sc": "^5.11.11",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "^18.14.4",
     "@types/react-router-dom": "^5.3.3",
@@ -18,6 +20,7 @@
     "csstype": "^3.1.1",
     "notistack": "^3.0.0",
     "react": "^18.2.0",
+    "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "react-on-screen": "^2.1.1",
