Firabase login working

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REACT_APP_APIKEY=AIzaSyDpfBvQsagIwyGFS6L-H8QJh4QdSDlpxZg
-REACT_APP_AUTHDOMAIN=me-portfolio-500d1.firebaseapp.com
-REACT_APP_PROJECTID=me-portfolio-500d1
-REACT_APP_STORAGEBUCKET=me-portfolio-500d1.appspot.com
-REACT_APP_MESSAGINGSENDERID=528559941645
-REACT_APP_APPID=1:528559941645:web:84aa81a370d8bead618d44
-MEASUREMENTID=G-P2QHJQEWW0
+VITE_BASE_APIKEY=AIzaSyDpfBvQsagIwyGFS6L-H8QJh4QdSDlpxZg
+VITE_BASE_AUTHDOMAIN=me-portfolio-500d1.firebaseapp.com
+VITE_BASE_PROJECTID=me-portfolio-500d1
+VITE_BASE_STORAGEBUCKET=me-portfolio-500d1.appspot.com
+VITE_BASE_MESSAGINGSENDERID=528559941645
+VITE_BASE_APPID=1:528559941645:web:84aa81a370d8bead618d44
+VITE_BASE_MEASUREMENTID=G-P2QHJQEWW0
