--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-on-screen": "^2.1.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
