--- a/package.json
+++ b/package.json
@@ -19,10 +19,6 @@
     "@mui/styled-engine": "^5.11.11",
     "@mui/styled-engine-sc": "^5.11.11",
     "@reduxjs/toolkit": "^1.9.3",
-    "@types/firebase": "^3.2.1",
-    "@types/node": "^18.14.4",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.26",
     "animate.css": "^4.1.0",
     "axios": "^1.3.4",
     "csstype": "^3.1.1",
@@ -43,6 +39,10 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "@types/firebase": "^3.2.1",
+    "@types/node": "^18.14.4",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.26"
   }
 }
