--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@mui/styled-engine": "^5.11.11",
     "@mui/styled-engine-sc": "^5.11.11",
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/nodemailer": "^6.4.7",
     "animate.css": "^4.1.0",
     "axios": "^1.3.4",
     "csstype": "^3.1.1",
     "firebase": "^9.19.1",
+    "nodemailer": "^6.9.1",
     "notistack": "^3.0.0",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.2",
@@ -35,14 +37,14 @@
     "styled-components": "^5.3.8"
   },
   "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0",
     "@types/firebase": "^3.2.1",
     "@types/node": "^18.14.4",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "@vitejs/plugin-react": "^3.1.0",
+    "typescript": "^4.9.3",
+    "vite": "^4.1.0"
   }
 }
