--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@emotion/styled": "^11.10.6",
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
@@ -24,7 +25,6 @@
     "axios": "^1.3.4",
     "csstype": "^3.1.1",
     "firebase": "^9.19.1",
-    "nodemailer": "^6.9.1",
     "notistack": "^3.0.0",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.2",
