--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "jsx": "react-jsx",
     "paths": { "@/*": ["./src/*"] },
   },
-  "include": ["src", "serverSMTP.js"],
+  "include": ["src", "server.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
