--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "clean-architecture",
+  "name": "portfolio",
   "private": true,
-  "version": "0.0.1",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -20,7 +20,6 @@
     "@mui/styled-engine": "^5.11.11",
     "@mui/styled-engine-sc": "^5.11.11",
     "@reduxjs/toolkit": "^1.9.3",
-    "@types/nodemailer": "^6.4.7",
     "animate.css": "^4.1.0",
     "axios": "^1.3.4",
     "csstype": "^3.1.1",
@@ -37,6 +36,7 @@
     "styled-components": "^5.3.8"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.7",
     "@types/firebase": "^3.2.1",
     "@types/node": "^18.14.4",
     "@types/react": "^18.0.27",
